--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "python.analysis.extraPaths": [
         "./src/tic_tac_toe/players",
-        "./src/checkers/players"
+        "./src/checkers/players",
+        "./src/checkers/blondie24"
     ]
 }
